--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "third_party/requests-futures"]
 	path = third_party/requests-futures
-	url = https://github.com/ross/requests-futures
+	url = https://github.com/brinkqiang/requests-futures
 [submodule "third_party/ycmd"]
 	path = third_party/ycmd
-	url = https://github.com/Valloric/ycmd
+	url = https://github.com/brinkqiang/ycmd
